<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UN" Id="{b541f9c8-4108-4c9f-8b61-c12477f47d23}">
    <Declaration><![CDATA[// For now empty structure to build master for em-s
TYPE ST_UN :
STRUCT
	Cmd : E_CMD;
	Status : E_Status;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>