<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="fbEM" Id="{20ab5818-6755-4885-a642-a71cb67ceff3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbEM
VAR_IN_OUT
	em : ST_EM;
	un : ST_UN;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE em.Config.Functionality OF
	E_Function.eSlider:
		SliderEM(em := em);
	E_Function.eSliderWithGripper:
		SliderWithGripperEM(em := em);
	E_Function.eXYMover:
		XYMover(em := em);
END_CASE]]></ST>
    </Implementation>
    <Method Name="SliderEM" Id="{07aad722-c68b-4909-a3bf-a0d96172fbdc}">
      <Declaration><![CDATA[METHOD SliderEM
VAR_IN_OUT
	em : ST_EM;
END_VAR
VAR
	State : INT := 0;
	bSliderSide : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF em.Config.Functionality = E_Function.eSlider THEN
	IF em.Cmd = E_CMD.stop THEN
		State := 15;
	END_IF
	
	IF em.Cmd = E_CMD.abort THEN
		State := 5;
	END_IF

	CASE State OF
		0:	IF em.Config.Data.I[1] OR em.Config.Data.I[2] THEN
				IF em.Config.Data.I[2] THEN
					bSliderSide := TRUE;
				END_IF
				State := 40;
			ELSE
				em.Status := E_Status.undefined;
				State := 20;
			END_IF
		
		5:	em.Status := E_Status.aborting;
			em.Config.Data.Q[1] := FALSE;
			em.Config.Data.Q[2] := FALSE;
			State := 10;
			
		10:	IF em.Cmd = E_CMD.clear THEN
				em.Status := E_Status.clearing;
				State := 20;
			END_IF
			
		15: em.Status := E_Status.stopping;
			em.Config.Data.Q[1] := FALSE;
			em.Config.Data.Q[2] := FALSE;
			State := 20;
			
		20:	em.Status := E_Status.stopped;
			State := 30;
			
		30:	IF em.Cmd = E_CMD.reset THEN
				em.Status := E_Status.resetting;
				em.Config.Data.Q[1] := FALSE;
				em.Config.Data.Q[2] := TRUE;
			END_IF
			
			IF em.Config.Data.I[1] THEN
				em.Config.Data.Q[2] := FALSE;
				State := 40;
			END_IF
			
		40:	em.Status := E_Status.idle;
			IF em.Cmd = E_CMD.start THEN
				State := 45;
			END_IF
			
		45:	em.Status := E_Status.Starting;
			State := 50;
			
		50:	IF bSliderSide THEN
				em.Config.Data.Q[2] := TRUE;
			ELSE
				em.Config.Data.Q[1] := TRUE;
			END_IF
			State := 60;
			
		60:	em.Status := E_Status.execute;
			IF em.Cmd = E_CMD.hold THEN
				em.Status := E_Status.holding;
				State := 200;
			ELSIF em.Cmd = E_CMD.suspend THEN
				em.Status := E_Status.suspending;
				State := 300;
			END_IF
			
			IF em.Config.Data.Q[2] AND em.Config.Data.I[1] THEN
				em.Status := E_Status.completing;
				em.Config.Data.Q[2] := FALSE;
				bSliderSide := FALSE;
				State := 70;
			END_IF
			
			IF em.Config.Data.Q[1] AND em.Config.Data.I[2] THEN
				em.Status := E_Status.completing;
				em.Config.Data.Q[1] := FALSE;
				bSliderSide := TRUE;
				State := 70;
			END_IF
		
		70:	em.Status := E_Status.completed;
			IF em.Cmd = E_CMD.reset THEN
				em.Status := E_Status.resetting;
				State := 40;
			END_IF
			
		200:em.Status := E_Status.held;
			em.Config.Data.Q[1] := FALSE;
			em.Config.Data.Q[2] := FALSE;
			IF em.Cmd = E_CMD.unhold THEN
				em.Status := E_Status.unholding;
				State := 50;
			END_IF
			
		300:em.Status := E_Status.suspended;
			em.Config.Data.Q[1] := FALSE;
			em.Config.Data.Q[2] := FALSE;
			IF em.Cmd = E_CMD.unsuspend THEN
				em.Status := E_Status.unsuspending;
				State := 50;
			END_IF
	END_CASE
END_IF















]]></ST>
      </Implementation>
    </Method>
    <Method Name="SliderWithGripperEM" Id="{342d6aa3-883a-4249-bdfa-9d01a313b0de}">
      <Declaration><![CDATA[METHOD SliderWithGripperEM
VAR_IN_OUT
	em : ST_EM;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[em.Config.Data.Q[6] := TRUE;
em.Status := E_Status.stopped;]]></ST>
      </Implementation>
    </Method>
    <Method Name="XYMover" Id="{9e3c5a7b-6f6c-4756-b085-a477cf899f19}">
      <Declaration><![CDATA[METHOD XYMover
VAR_IN_OUT
	em : ST_EM;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[em.Config.Data.Q[5] := TRUE;
em.Status := E_Status.held;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="fbEM">
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="4" />
      <LineId Id="16" Count="0" />
    </LineIds>
    <LineIds Name="fbEM.SliderEM">
      <LineId Id="9" Count="124" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="fbEM.SliderWithGripperEM">
      <LineId Id="8" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="fbEM.XYMover">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>